--- a/index.html
+++ b/index.html
@@ -47,44 +47,52 @@
 		</section>
 
 		<section class="welcome">
-			<h1>Bienvenue les jardiniers,</h1>
-			<p class="lil-margin-b">Le Potager Partagé a été créé en avril 2022. Il offre la possibilité, à tous, de disposer d’une parcelle de terre afin de cultiver fruits, fleurs, légumes à sa guise. Cela au sein d’un groupe d’amoureux de la nature qui repose sur la tolérance, le respect et le partage.</p>
-			<p class="lil-margin-b">Outre le fait de travailler la terre, c’est un lieu de convivialité et d’entraide que nous vous proposons. Un espace agréable, hors du béton et de la ville où chacun pourra se ressourcer et tisser des liens nouveaux.</p>
+			<h1>Bienvenue à tous,</h1>
+			<p class="lil-margin-b">L’Oasis Partagé est un projet d’éco-centre au cœur de la ville Tertre.</p>
+			<p class="lil-margin-b">Un véritable havre de paix et de détente ouvert au public et accessible à tous. Venez nous rendre visite et profiter de loisirs gravitant autour de la nature, de l'écologie et de la biodiversité.</p>
+			<p class="lil-margin-b">L’Oasis Partagé se veut être le théâtre d’ateliers pédagogiques, d'évènements et de festivités locales en vue de sensibiliser la population aux problèmes environnementaux et aux solutions qui existent.</p>
 			<p class="lil-margin-b">La permaculture au potager vous intéresse ? l’idée d’un jardin éco responsable vous tient à cœur ? Envie de vous détendre dans un cadre verdoyant ? Alors venez nous rejoindre …</p>
 		</section>
 
 		<section class="values">
 			<div class="value margin-b">
+				<img src="./images/leaf-solid.svg" alt="Image d'une feuille représentant l'écologie" class="values-logo lil-margin-b">
 				<h2 class="lil-margin-b">Un projet éco-responsable</h2>
-				<p>Les jardiniers se partagent la gestion du jardin dans un esprit de convivialité et avec la volonté de cultiver dans le respect de la terre et de la biodiversité.</p>
+				<p>L’intégralité de notre jardin est travaillé dans le respect de la terre et de la biodiversité.</p>
 			</div>
 			<div class="value margin-b">
-				<h2 class="lil-margin-b">Collectif et semi-collectif</h2>
-				<p>Le jardin est partagé entre parcelles individuelles et parcelles collectives. Chacun est libre de choisir son terrain de jeu.</p>
+				<img src="./images/money-bill-wave-solid.svg" alt="Image d'un billet représentant l'économie" class="values-logo lil-margin-b">
+				<h2 class="lil-margin-b">Des économies ?</h2>
+				<p>Que ce soit via le compostage collectif, ou le stockage des énergies disponibles … Il existe des moyens de faire des économies.</p>
 			</div>
 			<div class="value margin-b">
+				<img src="./images/arrow-up-right-dots.svg" alt="Image d'une flèche représentant le degré de niveau" class="values-logo lil-margin-b">
 				<h2 class="lil-margin-b">De tous niveaux</h2>
-				<p>Nos jardiniers ne sont pas tous expérimentés. Certains débutent, mais tous partagent le désir de cultiver la terre de manière naturelle (Pas d’engrais, de pesticides …)</p>
+				<p>Nos jardiniers ne sont pas tous expérimentés. Certains débutent, mais tous partagent le désir de travailler  la terre de manière naturelle.</p>
 			</div>
 			<div class="value margin-b">
+				<img src="./images/handshake.svg" alt="Image d'un serrage de main représentant le partage" class="values-logo lil-margin-b">
 				<h2 class="lil-margin-b">Le partage avant tout</h2>
-				<p>Ce projet met en avant l’entraide et le partage. Que ce soit le savoir-faire, les techniques de culture, les graines, plantes … Ensemble nous pouvons atteindre nos objectifs individuels et collectifs.</p>
+				<p>Ce projet met en avant l’entraide et le partage. Que ce soit le savoir-faire, les graines, plantes … Ensemble nous pouvons atteindre nos objectifs individuels et collectifs.</p>
 			</div>
 			<div class="value margin-b">
+				<img src="./images/thumbs-up.svg" alt="Image d'un pouce représentant le respect" class="values-logo lil-margin-b">
 				<h2 class="lil-margin-b">Le respect</h2>
-				<p>Nous respectons la terre, l’eau, la quiétude du lieu, la faune, la flore et notre prochain. C’est à ce prix que notre société sera pérenne.</p>
+				<p>Nous respectons la terre, l’eau, la faune, la flore et notre prochain. Une valeur primordiale pour une société pérenne.</p>
 			</div>
 			<div class="value margin-b">
-				<h2 class="lil-margin-b">Ensemble</h2>
-				<p>Les décisions, les actions et collaborations diverses sont décidées en collectivité pour le bien de tous et du projet. </p>
+				<img src="./images/hands-holding-circle-solid.svg" alt="Image de deux mains représentant l'entraide" class="values-logo lil-margin-b">
+				<h2 class="lil-margin-b">Comme un colibri…</h2>
+				<p>Si chacun fait sa part … c’est le monde qui y gagne. Crise économique, guerres, crise climatique … il n’y a qu'ensemble que nous parviendrons à surmonter les conséquences à venir.</p>
 			</div>
 		</section>
 
 		<section class="philosophie">
-			<h2 class="lil-margin-b">Notre Philosophie du Jardin</h2>
-			<p class="lil-margin-b">Né d’une démarche citoyenne, le Potager Partagé se base sur un sombre constat : Les crises que nous traversons et la société actuelle nous éloignent des choses primordiales de la vie. Le contact avec la faune et la flore, le respect de la nature, les liens sociaux sont autant de points qui se font de plus en plus rares.</p>
-			<p class="lil-margin-b">Il était temps pour nous de réagir, de faire notre part pour améliorer cela. Ce jardin collectif permet  à tous de retrouver un “nid douillet ”, un cadre verdoyant où l’aspect communautaire, le respect et le partage nous permettront de nous ressourcer.</p>
-			<div class="philo-img">
+			<h2 class="lil-margin-b">La philosophie de l’Oasis Partagé</h2>
+			<p class="lil-margin-b">Né d’une démarche citoyenne, l’Oasis Partagé se base sur un sombre constat : Les crises que nous traversons et la société actuelle nous éloignent des choses primordiales de la vie. Le contact avec la faune et la flore, le respect de la nature, les liens sociaux sont autant de points qui se font de plus en plus rares.</p>
+			<p class="lil-margin-b">Il était temps pour nous de réagir, de faire notre part pour améliorer cela.</p>
+			<p class="lil-margin-b">Ce projet collectif permet  à chacun de retrouver un “nid douillet , un cadre verdoyant où l’aspect communautaire, le respect et le partage nous permettront de nous ressourcer.</p>
+			<div class="philo-img lil-margin-b">
 				<img src="./images/lien-social-web.jpg" alt="">
 				<img src="./images/ruisseau-pont.jpg" alt="">
 				<img src="./images/ce-quapporte.png" alt="" class="mix-multiply">
@@ -95,42 +103,34 @@
 		<section class="goals">
 			<h2 class="lil-margin-b">Nos Objectifs</h2>
 			<ul>
-				<li class="lil-margin-b"><span class="first-letter">M</span>ettre des parcelles de terre à disposition pour y cultiver des légumes, des fruits,  des plantes et des fleurs dans une optique de respect de l’environnement et de développement durable.</li>
-				<img src="./images/feuille.jpg" alt="" class="anim-feuille">
-				<li class="lil-margin-b"><span class="first-letter">O</span>ffrir aux membres l’occasion de pratiquer une activité saine de plein air et de se procurer des aliments frais et sains.</li>
-				<img src="./images/feuille.jpg" alt="" class="anim-feuille">
-				<li class="lil-margin-b"><span class="first-letter">D</span>évelopper une bulle de nature ouverte à tous les visiteurs pour une balade, un moment de détente ou une rencontre.</li>
-				<img src="./images/feuille.jpg" alt="" class="anim-feuille">
-				<li class="lil-margin-b"><span class="first-letter">P</span>romouvoir l’écologie, l’alimentation durable, l’économie de l’eau, le recyclage et la gestion des déchets naturels, la biodiversité.</li>
+				<li class="lil-margin-b"><span class="first-letter">P</span>romouvoir l'écologie et la permaculture : Agrader la terre (≠ dégrader), respecter le sol, l’humain et la biodiversité en suivant les principes de la  permaculture et du bon sens.</li>
 				<img src="./images/feuille.jpg" alt="" class="anim-feuille">
 				<li class="lil-margin-b"><span class="first-letter">R</span>enforcer le lien social, favoriser les échanges, l’entraide, le dialogue non violent et la convivialité…. si importants dans le développement de chacun d’entre nous.</li>
 				<img src="./images/feuille.jpg" alt="" class="anim-feuille">
+				<li class="lil-margin-b"><span class="first-letter">S</span>ensibiliser à la nature, à la biodiversité, à l’économie de l’eau, au recyclage des déchets … Permettre de découvrir des techniques de culture naturelle, de gestion des déchets et d'énergies éco-responsables et donc comment réaliser de réelles économies.</li>
+				<img src="./images/feuille.jpg" alt="" class="anim-feuille">
+				<li class="lil-margin-b"><span class="first-letter">O</span>ffrir à tous un nouvel espace de loisirs et de détente. Un éco-lieu où chacun est libre de venir flâner, apprendre et partager.</li>
+				<img src="./images/feuille.jpg" alt="" class="anim-feuille">
+				<li class="lil-margin-b"><span class="first-letter">C</span>ontribuer à enrichir le cadre de vie de notre commune (un terrain privé et fermé, laissé à l’abandon et jonché de détritus est transformé en un éco lieu pédagogique ouvert à tous, un nouvel espace de loisir).</li>
+				<img src="./images/feuille.jpg" alt="" class="anim-feuille">
 				<li class="lil-margin-b"><span class="first-letter">S</span>ensibiliser les enfants (mais aussi les adultes) à la nature, à l'écologie et au recyclage.</li>
 				<img src="./images/feuille.jpg" alt="" class="anim-feuille">
-				<li class="lil-margin-b"><span class="first-letter">D</span>évelopper un pôle écologique en vue de la création d’évènements rythmant la vie locale (Fêtes de quartiers, ateliers pédagogiques en permaculture, pique-niques …)</li>
+				<li class="lil-margin-b"><span class="first-letter">D</span>évelopper un pôle écologique en vue de la création d’évènements rythmant la vie locale (Fêtes de quartiers, ateliers ou mini-conférence en permaculture, pique-niques, évènements en collaboration avec des associations de l’entité …)</li>
 			</ul>
 		</section>
 
 		<hr class="hr-footer">
 
 		<section class="actions">
-			<p class="lil-margin-b">Pour y parvenir, toutes les actions <span class="span-itl">(petites ou importantes)</span> ont leur importance :</p>
+			<p class="lil-margin-b">Pour y parvenir, toutes les actions ont leur importance :</p>
 			<ul class="lil-margin-b">
-				<li>L’échange et le partage mis en avant (Link vers page annonce/échange)</li>
-				<li>Compostez avec nous ! (Link vers page annonce/échange)</li>
-				<li>Stop ! Détendez vous … (Link vers page annonce/échange)</li>
-				<li>Des ateliers pédagogiques (Link vers page annonce/échange)</li>
-				<li>Le jardin pour tous (accès et potager adaptés aux personnes à mobilité réduite), les toilettes sèches, les collaborations avec des associations de la régions ….</li>
+				<a href="./pages/compostez.html"><li>Un lieu de compostage ouverts aux citoyens</li></a>
+				<a href="./pages/detendez.html"><li>Un lieu de détente public …</li></a>
+				<a href="./pages/ateliers.html"><li>Des ateliers pédagogiques</li></a>
+				<a href="#"><li>Le jardin pour tous (un potager adapté aux personnes à mobilité réduite), les toilettes sèches, les collaborations avec des associations de la région …</li></a>
 			</ul>
-			<p>... Toute idée peut nous aider, n’hésitez pas à nous la partager ! (Link vers formulaire/mail de contact /idée)</p>
+			<p>... Toute nouvelle idée peut nous aider, <a href="./pages/contact.html">n’hésitez pas à nous la partager !</a></p>
 		</section>
-
-		<hr class="hr-footer">
-
-		<section class="localisation">
-			<p class="adress lil-margin-b">Ce jardin extraordinaire se situe à la<span> rue Defuisseaux à 7333 TERTRE</span>.</p>
-			<p class="lil-margin-b">Il est accessible facilement depuis la servitude de passage menant à l’école Saint-Joseph au numéro 44 de la même rue.</p>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1269.7436387975033!2d3.813997483694909!3d50.469271704610875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5246e9eee42a5c05!2zNTDCsDI4JzA5LjQiTiAzwrA0OCc1My4yIkU!5e0!3m2!1sfr!2sfr!4v1656774599810!5m2!1sfr!2sfr" class="map" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>		</section>
 	</main>
 
 	<hr class="hr-footer">
@@ -155,8 +155,14 @@
 			</div>
 		</section>
 
+		<section class="localisation margin-b">
+			<p class="adress lil-margin-b">Ce jardin extraordinaire se situe à la<span> rue Defuisseaux à 7333 TERTRE</span>.</p>
+			<p class="lil-margin-b">Il est accessible facilement depuis la servitude de passage menant à l’école Saint-Joseph au numéro 44 de la même rue.</p>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1269.7436387975033!2d3.813997483694909!3d50.469271704610875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5246e9eee42a5c05!2zNTDCsDI4JzA5LjQiTiAzwrA0OCc1My4yIkU!5e0!3m2!1sfr!2sfr!4v1656774599810!5m2!1sfr!2sfr" class="map" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+		</section>
+
 		<section class="link">
-			<p><a href="../pages/galerie.html">Galerie</a></p>
+			<p><a href="./pages/galerie.html">Galerie</a></p>
 			<p><a href="./pages/partages.html">Nos partages</a></p>
 			<p><a href="https://www.facebook.com/groups/348710417268671">Facebook</a></p>
 			<p><a href="https://www.youtube.com/channel/UC5xYo2Wz-glybwNWbY6y9dA">Youtube</a></p>
