--- a/pages/ateliers.html
+++ b/pages/ateliers.html
@@ -102,9 +102,15 @@
 			</div>
 		</section>
 
+		<section class="localisation margin-b">
+			<p class="adress lil-margin-b">Ce jardin extraordinaire se situe à la<span> rue Defuisseaux à 7333 TERTRE</span>.</p>
+			<p class="lil-margin-b">Il est accessible facilement depuis la servitude de passage menant à l’école Saint-Joseph au numéro 44 de la même rue.</p>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1269.7436387975033!2d3.813997483694909!3d50.469271704610875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5246e9eee42a5c05!2zNTDCsDI4JzA5LjQiTiAzwrA0OCc1My4yIkU!5e0!3m2!1sfr!2sfr!4v1656774599810!5m2!1sfr!2sfr" class="map" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+		</section>
+
 		<section class="link">
-			<p><a href="./pages/galerie.html">Galerie</a></p>
-			<p><a href="./pages/bourse.html">Notre bon coin</a></p>
+			<p><a href="galerie.html">Galerie</a></p>
+			<p><a href="partages.html">Nos partages</a></p>
 			<p><a href="https://www.facebook.com/groups/348710417268671">Facebook</a></p>
 			<p><a href="https://www.youtube.com/channel/UC5xYo2Wz-glybwNWbY6y9dA">Youtube</a></p>
 			<p><a href="https://discord.gg/b2tM2G27">Discord</a></p>
